# research

./: README.md  Revault Watchtower Design and Analysis.md  Risk analysis of Revault watchtower system.md  watchtower.md  wt_system_research.md
Model/: WTSM.py  WTSim.py  main.py  plot_style.txt  results.py  simulation.py  statemachine.py  study.py  transactions.py  tx_fee_history.csv  tx_weights.csv  utils.py
block_fees/: Cargo.toml  README.md
block_fees/src/: main.rs
feebumping/block_fees/: Cargo.toml  README.md
feebumping/model/: results.py  simulation.py  statemachine.py  utils.py
model/: main.py  results.py  simulation.py  statemachine.py
model/examples/: misconfigured.sh  monte_carlo.sh  otc_desk.sh  run.sh
risk_analysis/: README.md
