[package]
name = "block_fees"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocks_iterator = "0.2.0"

# Needed for blocks_iterator's Config::from_args(). Already one of its deps.
structopt = "0.3.21"

bitcoin = "0.26.0"

# Needed to display timestamp as a date
chrono = "0.4.19"
